compiler warnings (casts, access to static, forgotten valueOf,..), added override, cleanup
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>